docs: Fin X versao 1.0.0

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,12 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Necessário para tsBuildInfoFile */
-    "composite": true
+    "composite": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"]
 }
